--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body{
     background: rgb(255,182,80);
     background: radial-gradient(circle, rgba(255,182,80,1) 0%, rgba(252,70,171,1) 100%); 
 }
+ /*
+=================================================
+NAVBAR
+=================================================
+*/
 .nav-link {
     color: rgb(255, 111, 152) !important;
     font-size: 23px;
@@ -12,3 +17,15 @@ body{
     font-size: 35px;
     font-family:Impact, Haettenschweiler, 'Ariel Narrow Bold', sans-serif;
 }
+.navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(255, 98, 158)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+/*
+=================================================
+HERO SECTION
+=================================================
+*/
+.display-5{
+    font-size: 50;
+}
+  
