--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-body{
+body {
     background: rgb(255,182,80);
-    background: radial-gradient(circle, rgba(255,182,80,1) 0%, rgba(252,70,171,1) 100%); 
+    background: radial-gradient(circle, rgba(255,182,80,1) 0%, rgba(252,70,171,1) 100%);
 }
- /*
+
+/*
 =================================================
 NAVBAR
 =================================================
@@ -10,25 +11,50 @@ NAVBAR
 .nav-link {
     color: rgb(255, 111, 152) !important;
     font-size: 23px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-.navbar-brand{
+
+.navbar-brand {
     color: rgb(255, 98, 158) !important;
     font-size: 35px;
-    font-family:Impact, Haettenschweiler, 'Ariel Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Ariel Narrow Bold', sans-serif;
 }
-.navbar-toggler-icon{
+
+.navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(255, 98, 158)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
 }
+
 /*
 =================================================
 HERO SECTION
 =================================================
 */
-.display-5{
-    font-size: 50;
-}
-.hero-section{
-    background-color: rgba(254, 6, 134, 0.689);
-}
+.hero-section {
+    background-color: rgba(255, 0, 149, 0.273);
+    background-image: url("img/bg-image.png");
+    background-position: center;
+    background-size: cover;
+  }
   
+  .hero-section h1 {
+    color: #ffffff;
+    font-size: 56px;
+    font-weight: 900;
+  }
+  
+  .hero-section .lead {
+    color: #fff;
+    font-weight: 300;
+    text-shadow: 3px 1px 2px rgb(255, 176, 214);
+    font-size: 18px;
+  }
+  /*
+=================================================
+RESUME SECTION
+=================================================
+*/
+.btn-center {
+    display: block;
+    margin: 0 auto;
+}
+
